--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --prod --aot=true"
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -31,6 +31,7 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.5.6",
+    "serve-favicon": "^2.5.0",
     "typescript": "~2.5.3",
     "zone.js": "^0.8.19"
   },
@@ -55,7 +56,7 @@
     "typescript": "~2.5.3"
   },
   "engines": {
-    "node": "6.11.0",
-    "npm": "3.10.10"
+    "node": "7.9.0",
+    "npm": "4.2.0"
   }
 }
