--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/router": "^5.2.0",
     "compression": "^1.7.2",
     "core-js": "^2.4.1",
+    "express": "^4.16.3",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.5.6",
     "serve-favicon": "^2.5.0",
