--- a/package.json
+++ b/package.json
@@ -4,21 +4,18 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build --prod"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.0",
     "@angular/cdk": "^5.2.4",
-    "@angular/cli": "~1.7.3",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
-    "@angular/compiler-cli": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/flex-layout": "^5.0.0-beta.14",
     "@angular/forms": "^5.2.0",
@@ -27,13 +24,9 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "compression": "^1.7.2",
     "core-js": "^2.4.1",
-    "express": "^4.16.3",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.5.6",
-    "serve-favicon": "^2.5.0",
-    "typescript": "~2.5.3",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
@@ -55,9 +48,5 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
-  },
-  "engines": {
-    "node": "7.9.0",
-    "npm": "4.2.0"
   }
 }
