--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-google-recaptcha": "^1.0.3",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "highlight-within-textarea": "^2.0.5",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
