--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~1.7.3",
+    "@angular/compiler-cli": "^5.2.0",
     "@angular/animations": "^5.2.0",
     "@angular/cdk": "^5.2.4",
     "@angular/common": "^5.2.0",
@@ -29,7 +32,9 @@
     "hammerjs": "^2.0.8",
     "highlight-within-textarea": "^2.0.5",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.19",
+    "express": "^4.16.3",
+    "compression": "^1.7.2"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.3",
@@ -50,5 +55,9 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
+  },
+  "engines": {
+    "node": "7.9.0",
+    "npm": "4.2.0"
   }
 }
